@@ -4,7 +4,9 @@ Changelog
 4.1.0 (unreleased)
 ------------------
 
-- Drop Python 2.6 support.
+- Add support for Python 3.6, 3.7 and PyPy3.
+
+- Drop support for Python 2.6, 3.3 and 3.4.
 
 - Add ``BCRYPTHashingScheme``, optionally available if package is
   installed with the `bcrypt` extra.
